make sure blog takes full width on mobile

--- a/assets/sass/pages/_home.sass
+++ b/assets/sass/pages/_home.sass
@@ -240,6 +240,7 @@ main
       display: none
 
     .copy
+      width: 100% !important
       padding-left: 0
 
 .partners
